LPD-68664 Add the new `assigneeUserExternalReferenceCode` query parameter, but don't include it as a Java method parameter
